cmake_minimum_required(VERSION 3.0)
project(rpp_performancetests/HIP_NEW)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../../cmake)
set(ROCM_PATH /opt/rocm CACHE PATH "default ROCm installation path")
list(APPEND CMAKE_PREFIX_PATH ${ROCM_PATH})

# Set message options
if(NOT WIN32)
    string(ASCII 27 Esc)
    set(ColourReset "${Esc}[m")
    set(Red         "${Esc}[31m")
    set(Green       "${Esc}[32m")
    set(Yellow      "${Esc}[33m")
    set(Blue        "${Esc}[34m")
    set(BoldBlue    "${Esc}[1;34m")
    set(Magenta     "${Esc}[35m")
    set(Cyan        "${Esc}[36m")
    set(White       "${Esc}[37m")
endif()

find_package(hip QUIET)
find_package(OpenCV QUIET)

if (hip_FOUND AND OpenCV_FOUND)
    message("-- ${Green}${PROJECT_NAME} set to build with rpp, hip and OpenCV${ColourReset}")
    set(COMPILER_FOR_HIP ${ROCM_PATH}/bin/hipcc)
    set(CMAKE_CXX_COMPILER ${COMPILER_FOR_HIP})

    include_directories(${hip_INCLUDE_DIRS} ${hip_INCLUDE_DIRS}/hip)
    include_directories(${OpenCV_INCLUDE_DIRS})
    include_directories(${ROCM_PATH}/include ${ROCM_PATH}/rpp/include /usr/local/include)
    link_directories(${ROCM_PATH}/lib ${ROCM_PATH}/rpp/lib/ /usr/local/lib)

    add_executable(BatchPD_hip_pkd3 BatchPD_hip_pkd3.cpp)
    add_executable(BatchPD_hip_pln1 BatchPD_hip_pln1.cpp)
    add_executable(BatchPD_hip_pln3 BatchPD_hip_pln3.cpp)
    add_executable(Tensor_hip_pkd3 Tensor_hip_pkd3.cpp)
    add_executable(Tensor_hip_pln1 Tensor_hip_pln1.cpp)
    add_executable(Tensor_hip_pln3 Tensor_hip_pln3.cpp)
    # add_executable(Single_hip Single_hip.cpp)
    add_executable(uniqueFunctionalities_hip uniqueFunctionalities_hip.cpp)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -DGPU_SUPPORT=1 -DRPP_BACKEND_HIP=1 -std=c++11")
    target_link_libraries(BatchPD_hip_pkd3 ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    target_link_libraries(BatchPD_hip_pln1 ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    target_link_libraries(BatchPD_hip_pln3 ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    target_link_libraries(Tensor_hip_pkd3 ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    target_link_libraries(Tensor_hip_pln1 ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    target_link_libraries(Tensor_hip_pln3 ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    # target_link_libraries(Single_hip ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
    target_link_libraries(uniqueFunctionalities_hip ${OpenCV_LIBS} -lamd_rpp ${hip_LIBRARIES} pthread boost_filesystem boost_system hip::device)
else()
    message("-- ${Yellow}Error: OpenCV and hip must be installed to install ${PROJECT_NAME} successfully!${ColourReset}")
endif()